Bug 464417 - After porting to OffscreenEffect the Invert effect causes glitches when rerendering window decoration buttons on mouse hover
Summary: After porting to OffscreenEffect the Invert effect causes glitches when reren...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.26.90
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2023-01-17 17:14 UTC by andriy.parhomenko
Modified: 2023-02-20 12:01 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andriy.parhomenko 2023-01-17 17:14:23 UTC
STEPS TO REPRODUCE
1. Enable Invert effect
2. Hover mouse on window decoration buttons 

OBSERVED RESULT
When the Invert effect is enabled the window decoration buttons (maximize, minimize, close) are not rerendered instantly, but have glitches: circles may be rendered on multiple buttons simultaneously, partially rendered or not rendered at all.

EXPECTED RESULT
When the Invert effect is enabled the window decoration buttons rendering is the same, as when no effect is applied (buttons are rerendered instantly with no glitches and the invert effect applied).

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Neon Developer 
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.102
Qt Version: 5.15.8
Comment 1 andriy.parhomenko 2023-01-23 15:46:13 UTC
The issue is still present in Plasma 5.26.90. 
I can see similar glitches not only with updating titlebar buttons, but also with updating titlebar text.
This issue also affects other OffscreenEffect plugins.
Comment 2 Vitaliy Filippov 2023-01-28 08:23:01 UTC
+1, I also observe this problem
Comment 3 H90_20 2023-01-30 11:50:38 UTC
I’m experiencing the same issue.
Comment 4 Dominique Hummel 2023-01-31 21:27:01 UTC
Still present in current 5.27 beta
Comment 5 Dominique Hummel 2023-02-18 18:00:40 UTC
Something else I've just noticed: This bug disappears when the window in question is constantly rendering something.

To confirm this, you can follow these steps:
1. Open Firefox
2. Enable the server-side titlebar
3. Start playing a video
4. Enable invert effect
5. Hover mouse over Firefox' server-side decorations

You will observe, that as long as the video is playing (being rendered), the window decorations respond normally. Pause/stop the video, and the window decorations return to glitching.
Comment 6 Bug Janitor Service 2023-02-20 10:51:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3634
Comment 7 David Redondo 2023-02-20 11:24:41 UTC
Git commit 264a19247bc081dfb4701509b1920a539e0b65bc by David Redondo.
Committed on 20/02/2023 at 10:55.
Pushed by davidre into branch 'master'.

Mark Window as damaged when decoration or shadow changes

Enforms thumbnails, screencasts and effects of these changes and
that the window needs repainting.
FIXED-IN:5.27.1

M  +5    -0    src/scene/windowitem.cpp

https://invent.kde.org/plasma/kwin/commit/264a19247bc081dfb4701509b1920a539e0b65bc
Comment 8 David Redondo 2023-02-20 12:01:57 UTC
Git commit bbe2d4236c8c5437bafd9e09d06e69a35e548e31 by David Redondo.
Committed on 20/02/2023 at 11:28.
Pushed by vladz into branch 'Plasma/5.27'.

Mark Window as damaged when decoration or shadow changes

Enforms thumbnails, screencasts and effects of these changes and
that the window needs repainting.
FIXED-IN:5.27.1


(cherry picked from commit 264a19247bc081dfb4701509b1920a539e0b65bc)

M  +5    -0    src/scene/windowitem.cpp

https://invent.kde.org/plasma/kwin/commit/bbe2d4236c8c5437bafd9e09d06e69a35e548e31