Mark Window as damaged when decoration or shadow changes

Enforms thumbnails, screencasts and effects of these changes and
that the window needs repainting.
BUG:464417
FIXED-IN:5.27.1


(cherry picked from commit 264a19247bc081dfb4701509b1920a539e0b65bc)